--- a/src/Leagueoflegends.Support/Themes/Units/RiotScrollViewer.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotScrollViewer.xaml
@@ -2,47 +2,20 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:units="using:Leagueoflegends.Support.UI.Units">
-
   <Style TargetType="units:RiotScrollViewer">
     <Setter Property="HorizontalScrollBarVisibility" Value="Auto" />
     <Setter Property="VerticalScrollBarVisibility" Value="Auto" />
-    <Setter Property="HorizontalScrollMode" Value="Auto" />
-    <Setter Property="VerticalScrollMode" Value="Auto" />
+    <Setter Property="HorizontalScrollMode" Value="Enabled" />
+    <Setter Property="VerticalScrollMode" Value="Enabled" />
     <Setter Property="ZoomMode" Value="Disabled" />
     <Setter Property="Background" Value="Transparent" />
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="units:RiotScrollViewer">
           <Border
-                        BorderBrush="{TemplateBinding BorderBrush}"
-                        BorderThickness="{TemplateBinding BorderThickness}"
-                        CornerRadius="{TemplateBinding CornerRadius}">
-            <VisualStateManager.VisualStateGroups>
-              <VisualStateGroup x:Name="ScrollingIndicatorStates">
-                <VisualState x:Name="NoIndicator" />
-                <VisualState x:Name="TouchIndicator">
-                  <Storyboard>
-                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="VerticalScrollBar" Storyboard.TargetProperty="IndicatorMode">
-                      <DiscreteObjectKeyFrame KeyTime="0" Value="TouchIndicator" />
-                    </ObjectAnimationUsingKeyFrames>
-                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="HorizontalScrollBar" Storyboard.TargetProperty="IndicatorMode">
-                      <DiscreteObjectKeyFrame KeyTime="0" Value="TouchIndicator" />
-                    </ObjectAnimationUsingKeyFrames>
-                  </Storyboard>
-                </VisualState>
-                <VisualState x:Name="MouseIndicator">
-                  <Storyboard>
-                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="VerticalScrollBar" Storyboard.TargetProperty="IndicatorMode">
-                      <DiscreteObjectKeyFrame KeyTime="0" Value="MouseIndicator" />
-                    </ObjectAnimationUsingKeyFrames>
-                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="HorizontalScrollBar" Storyboard.TargetProperty="IndicatorMode">
-                      <DiscreteObjectKeyFrame KeyTime="0" Value="MouseIndicator" />
-                    </ObjectAnimationUsingKeyFrames>
-                  </Storyboard>
-                </VisualState>
-              </VisualStateGroup>
-            </VisualStateManager.VisualStateGroups>
-
+              BorderBrush="{TemplateBinding BorderBrush}"
+              BorderThickness="{TemplateBinding BorderThickness}"
+              CornerRadius="{TemplateBinding CornerRadius}">
             <Grid Background="{TemplateBinding Background}">
               <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -52,75 +25,101 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="Auto" />
               </Grid.RowDefinitions>
-
               <ScrollContentPresenter
-                                x:Name="ScrollContentPresenter"
-                                Grid.RowSpan="2"
-                                Grid.ColumnSpan="2"
-                                Content="{TemplateBinding Content}"
-                                ContentTemplate="{TemplateBinding ContentTemplate}"
-                                Margin="{TemplateBinding Padding}" />
-
+                  x:Name="ScrollContentPresenter"
+                  Grid.RowSpan="2"
+                  Grid.ColumnSpan="2"
+                  Margin="{TemplateBinding Padding}" />
               <ScrollBar
-                                x:Name="VerticalScrollBar"
-                                Grid.Column="1"
-                                Grid.Row="0"
-                                Orientation="Vertical"
-                                ViewportSize="{TemplateBinding ViewportHeight}"
-                                Maximum="{TemplateBinding ScrollableHeight}"
-                                Value="{Binding VerticalOffset, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
-                                Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}"
-                                Style="{StaticResource RiotVerticalScrollBarStyle}" />
-
+                  x:Name="VerticalScrollBar"
+                  Grid.Column="1"
+                  Orientation="Vertical"
+                  Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}"
+                  Value="{TemplateBinding VerticalOffset}"
+                  ViewportSize="{TemplateBinding ViewportHeight}"
+                  Maximum="{TemplateBinding ScrollableHeight}">
+                <ScrollBar.Template>
+                  <ControlTemplate TargetType="ScrollBar">
+                    <Grid>
+                      <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                      </Grid.RowDefinitions>
+                      <Border CornerRadius="4" Background="Transparent">
+                        <Thumb x:Name="VerticalThumb" Background="#CDBE91" />
+                      </Border>
+                      <VisualStateManager.VisualStateGroups>
+                        <VisualStateGroup x:Name="ScrollingStates">
+                          <VisualState x:Name="Scrolling">
+                            <Storyboard>
+                              <DoubleAnimation
+                                Storyboard.TargetName="VerticalThumb"
+                                Storyboard.TargetProperty="Opacity"
+                                To="1"
+                                Duration="0:0:0.2" />
+                            </Storyboard>
+                          </VisualState>
+                          <VisualState x:Name="NotScrolling">
+                            <Storyboard>
+                              <DoubleAnimation
+                                Storyboard.TargetName="VerticalThumb"
+                                Storyboard.TargetProperty="Opacity"
+                                To="0"
+                                Duration="0:0:0.2" />
+                            </Storyboard>
+                          </VisualState>
+                        </VisualStateGroup>
+                      </VisualStateManager.VisualStateGroups>
+                    </Grid>
+                  </ControlTemplate>
+                </ScrollBar.Template>
+              </ScrollBar>
               <ScrollBar
-                                x:Name="HorizontalScrollBar"
-                                Grid.Column="0"
-                                Grid.Row="1"
-                                Orientation="Horizontal"
-                                ViewportSize="{TemplateBinding ViewportWidth}"
-                                Maximum="{TemplateBinding ScrollableWidth}"
-                                Value="{Binding HorizontalOffset, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
-                                Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"
-                                Style="{StaticResource RiotHorizontalScrollBarStyle}" />
-
-              <Border
-                                x:Name="ScrollBarSeparator"
-                                Grid.Row="1"
-                                Grid.Column="1"
-                                Background="{ThemeResource ScrollBarSeparatorBackground}" />
+                  x:Name="HorizontalScrollBar"
+                  Grid.Row="1"
+                  Orientation="Horizontal"
+                  Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"
+                  Value="{TemplateBinding HorizontalOffset}"
+                  ViewportSize="{TemplateBinding ViewportWidth}"
+                  Maximum="{TemplateBinding ScrollableWidth}">
+                <ScrollBar.Template>
+                  <ControlTemplate TargetType="ScrollBar">
+                    <Grid>
+                      <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                      </Grid.ColumnDefinitions>
+                      <Border CornerRadius="4" Background="Transparent">
+                        <Thumb x:Name="HorizontalThumb" Background="#CDBE91" />
+                      </Border>
+                      <VisualStateManager.VisualStateGroups>
+                        <VisualStateGroup x:Name="ScrollingStates">
+                          <VisualState x:Name="Scrolling">
+                            <Storyboard>
+                              <DoubleAnimation
+                                Storyboard.TargetName="HorizontalThumb"
+                                Storyboard.TargetProperty="Opacity"
+                                To="1"
+                                Duration="0:0:0.2" />
+                            </Storyboard>
+                          </VisualState>
+                          <VisualState x:Name="NotScrolling">
+                            <Storyboard>
+                              <DoubleAnimation
+                                Storyboard.TargetName="HorizontalThumb"
+                                Storyboard.TargetProperty="Opacity"
+                                To="0"
+                                Duration="0:0:0.2" />
+                            </Storyboard>
+                          </VisualState>
+                        </VisualStateGroup>
+                      </VisualStateManager.VisualStateGroups>
+                    </Grid>
+                  </ControlTemplate>
+                </ScrollBar.Template>
+              </ScrollBar>
             </Grid>
           </Border>
         </ControlTemplate>
       </Setter.Value>
     </Setter>
-  </Style>
-
-  <Style x:Key="RiotScrollBarStyle" TargetType="ScrollBar">
-    <Setter Property="Background" Value="#785A28" />
-    <Setter Property="Foreground" Value="#CDBE91" />
-    <Setter Property="BorderThickness" Value="0" />
-    <Setter Property="Template">
-      <Setter.Value>
-        <ControlTemplate TargetType="ScrollBar">
-          <Grid x:Name="Root">
-            <Grid.RowDefinitions>
-              <RowDefinition Height="Auto" />
-              <RowDefinition Height="*" />
-              <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Rectangle x:Name="TrackRect" Fill="{TemplateBinding Background}" Grid.Row="1" />
-            <Rectangle x:Name="ThumbRect" Fill="{TemplateBinding Foreground}" Grid.Row="1" />
-          </Grid>
-        </ControlTemplate>
-      </Setter.Value>
-    </Setter>
-  </Style>
-
-  <Style x:Key="RiotVerticalScrollBarStyle" TargetType="ScrollBar" BasedOn="{StaticResource RiotScrollBarStyle}">
-    <Setter Property="Width" Value="8" />
-  </Style>
-
-  <Style x:Key="RiotHorizontalScrollBarStyle" TargetType="ScrollBar" BasedOn="{StaticResource RiotScrollBarStyle}">
-    <Setter Property="Height" Value="8" />
   </Style>
 </ResourceDictionary>
