--- a/src/Leagueoflegends.Home/Themes/Views/OverviewContent.xaml
+++ b/src/Leagueoflegends.Home/Themes/Views/OverviewContent.xaml
@@ -3,10 +3,10 @@
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:views="using:Leagueoflegends.Home.UI.Views">
 
-  <Style TargetType="views:HomeContent">
+  <Style TargetType="views:OverviewContent">
     <Setter Property="Template">
       <Setter.Value>
-        <ControlTemplate TargetType="views:HomeContent">
+        <ControlTemplate TargetType="views:OverviewContent">
           <Border>
             <TextBlock FontSize="30" Foreground="Green" Text="Home"/>
           </Border>
