--- a/src/Leagueoflegends.Home/Themes/Views/OverviewContent.xaml
+++ b/src/Leagueoflegends.Home/Themes/Views/OverviewContent.xaml
@@ -1,15 +1,50 @@
 ﻿<ResourceDictionary
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:based="using:Leagueoflegends.Support.UI.Units"
   xmlns:views="using:Leagueoflegends.Home.UI.Views">
 
   <Style TargetType="views:OverviewContent">
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="views:OverviewContent">
-          <Border>
-            <TextBlock FontSize="30" Foreground="Green" Text="Home"/>
-          </Border>
+          <Grid>
+            <StackPanel VerticalAlignment="Top" Margin="30,0,0,0">
+              <TextBlock 
+                Foreground="#A09B8C"
+                FontSize="12.5"
+                Text="JUNE 21 - JULY 12"
+                FontFamily="Friz Quadrata Std"
+                FontWeight="Bold"
+                Margin="0,60,0,10"/>
+
+              <TextBlock 
+                Foreground="#F0E6D2"
+                FontSize="40"
+                FontFamily="Friz Quadrata Std"
+                Text="PRIME GAMING -&#x0a;LOL"
+                FontWeight="Bold"/>
+
+              <TextBlock 
+                Foreground="#FFA09B8C"
+                FontSize="14"
+                TextWrapping="WrapWholeWords"
+                Text="Second of 3 skin shards for this month now&#x0a;available with Prime Gaming."
+                Margin="0,12,0,12"/>
+
+              <based:RiotButton 
+                Width="130"
+                Height="32"
+                FontSize="14"
+                FontWeight="Bold"
+                BorderThickness="2,2,2,2"
+                FontFamily="Friz Quadrata Std"
+                HorizontalAlignment="Left"
+                Content="CLAIM NOW"
+                Margin="0,6,0,0"
+                Padding="18,0,18,0"/>
+            </StackPanel>
+          </Grid>
         </ControlTemplate>
       </Setter.Value>
     </Setter>
