--- a/src/Leagueoflegends.Main/Themes/Views/MainContent.xaml
+++ b/src/Leagueoflegends.Main/Themes/Views/MainContent.xaml
@@ -86,8 +86,8 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
               </Grid.ColumnDefinitions>
-              <james:UnoLayer Grid.Column="0" LayerName="ContentLayer" Margin="0 40 0 0"/>
-              <james:UnoLayer Grid.Column="0" LayerName="SubNavLayer"/>
+              <james:UnoLayer Grid.Column="0" LayerName="ContentLayer" Margin="0 0 0 0"/>
+              <james:UnoLayer Grid.Column="0" LayerName="SubNavLayer" HorizontalAlignment="Left"/>
               <james:UnoLayer Grid.Column="1" LayerName="SocialLayer"/>
             </Grid>
           </Grid>
