--- a/src/Leagueoflegends.Collection/Themes/Generic.xaml
+++ b/src/Leagueoflegends.Collection/Themes/Generic.xaml
@@ -3,5 +3,6 @@
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <ResourceDictionary.MergedDictionaries>
     <ResourceDictionary Source="ms-appx:///Leagueoflegends.Collection/Themes/Views/ChampionsContent.xaml"/>
+    <ResourceDictionary Source="ms-appx:///Leagueoflegends.Collection/Themes/Views/SpellsContent.xaml"/>
   </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
