--- a/src/Leagueoflegends.Support/Themes/Units/RiotChampCollectionListBox.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotChampCollectionListBox.xaml
@@ -22,6 +22,27 @@
     </Setter>
   </Style>
 
+  <Style TargetType="Path" x:Key="FireIconStyle">
+    <Setter Property="Width" Value="18"/>
+    <Setter Property="Height" Value="18"/>
+    <Setter Property="Fill" Value="#B09B8C"/>
+    <Setter Property="HorizontalAlignment" Value="Right"/>
+    <Setter Property="VerticalAlignment" Value="Center"/>
+    <Setter Property="Stretch" Value="Uniform"/>
+    <Setter Property="Margin" Value="75,0,10,0"/>
+    <Setter Property="Data" Value="M17.66 11.2C17.43 10.9 17.15 10.64 16.89 10.38C16.22 9.78 15.46 9.35 14.82 8.72C13.33 7.26 13 4.85 13.95 3C13 3.23 12.17 3.75 11.46 4.32C8.87 6.4 7.85 10.07 9.07 13.22C9.11 13.32 9.15 13.42 9.15 13.55C9.15 13.77 9 13.97 8.8 14.05C8.57 14.15 8.33 14.09 8.14 13.93C8.08 13.88 8.04 13.83 8 13.76C6.87 12.33 6.69 10.28 7.45 8.64C5.78 10 4.87 12.3 5 14.47C5.06 14.97 5.12 15.47 5.29 15.97C5.43 16.57 5.7 17.17 6 17.7C7.08 19.43 8.95 20.67 10.96 20.92C13.1 21.19 15.39 20.8 17.03 19.32C18.86 17.66 19.5 15 18.56 12.72L18.43 12.46C18.22 12 17.66 11.2 17.66 11.2M14.5 17.5C14.22 17.74 13.76 18 13.4 18.1C12.28 18.5 11.16 17.94 10.5 17.28C11.69 17 12.4 16.12 12.61 15.23C12.78 14.43 12.46 13.77 12.33 13C12.21 12.26 12.23 11.63 12.5 10.94C12.69 11.32 12.89 11.7 13.13 12C13.9 13 15.11 13.44 15.37 14.8C15.41 14.94 15.43 15.08 15.43 15.23C15.46 16.05 15.1 16.95 14.5 17.5H14.5Z"/>
+  </Style>
+
+  <Style TargetType="Image" x:Key="ChampionBadgeStyle">
+    <Setter Property="HorizontalAlignment" Value="Left"/>
+    <Setter Property="VerticalAlignment" Value="Bottom"/>
+    <Setter Property="Source" Value="ms-appx:///Leagueoflegends.Support/Images/badge_champion1.png"/>
+    <Setter Property="Margin" Value="0 0 0 -3"/>
+    <Setter Property="Height" Value="34"/>
+    <Setter Property="Stretch" Value="Uniform"/>
+  </Style>
+
+
   <Style TargetType="units:RiotChampCollectionGroupItem">
     <Setter Property="IsExpanded" Value="True"/>
     <Setter Property="ItemsBindingPath" Value="Children"/>
@@ -52,8 +73,17 @@
     </Setter>
   </Style>
 
+  <Style TargetType="StackPanel" x:Key="ChampionPanelStyle">
+    <Setter Property="Height" Value="30"/>
+    <Setter Property="Background" Value="Black"/>
+    <Setter Property="Margin" Value="0,0,1,1"/>
+    <Setter Property="Opacity" Value="0.7"/>
+    <Setter Property="VerticalAlignment" Value="Bottom"/>
+    <Setter Property="Orientation" Value="Horizontal"/>
+  </Style>
 
   <Style TargetType="units:RiotChampCollectionItemControl">
+    <Setter Property="GroupName" Value="Champion"/>
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="units:RiotChampCollectionItemControl">
@@ -79,8 +109,7 @@
                     <ObjectAnimationUsingKeyFrames Storyboard.TargetName="BottomPanel" Storyboard.TargetProperty="Opacity">
                       <DiscreteObjectKeyFrame KeyTime="0" Value="1"/>
                     </ObjectAnimationUsingKeyFrames>
-                    <DoubleAnimation Storyboard.TargetName="ChampionImage" Storyboard.TargetProperty="Opacity"
-                                                     To="0.8" Duration="0:0:0.2"/>
+                    <DoubleAnimation Storyboard.TargetName="ChampionImage" Storyboard.TargetProperty="Opacity" To="0.8" Duration="0:0:0.2"/>
                     <ObjectAnimationUsingKeyFrames Storyboard.TargetName="NameText" Storyboard.TargetProperty="Foreground">
                       <DiscreteObjectKeyFrame KeyTime="0" Value="#F0E6D2"/>
                     </ObjectAnimationUsingKeyFrames>
@@ -91,32 +120,22 @@
                     <ObjectAnimationUsingKeyFrames Storyboard.TargetName="Border" Storyboard.TargetProperty="BorderBrush">
                       <DiscreteObjectKeyFrame KeyTime="0" Value="#C8AA6E"/>
                     </ObjectAnimationUsingKeyFrames>
-                    <DoubleAnimation Storyboard.TargetName="ChampionImage" Storyboard.TargetProperty="Opacity"
-                                                     To="0.6" Duration="0:0:0.1"/>
+                    <DoubleAnimation Storyboard.TargetName="ChampionImage" Storyboard.TargetProperty="Opacity" To="0.6" Duration="0:0:0.1"/>
                     <ObjectAnimationUsingKeyFrames Storyboard.TargetName="NameText" Storyboard.TargetProperty="Foreground">
                       <DiscreteObjectKeyFrame KeyTime="0" Value="#C8AA6E"/>
                     </ObjectAnimationUsingKeyFrames>
                   </Storyboard>
                 </VisualState>
-                <VisualState x:Name="Unselected"/>
-                <VisualState x:Name="Selected">
-                  <Storyboard>
-                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="Border" Storyboard.TargetProperty="BorderBrush">
-                      <DiscreteObjectKeyFrame KeyTime="0" Value="#C8AA6E"/>
-                    </ObjectAnimationUsingKeyFrames>
-                    <DoubleAnimation Storyboard.TargetName="SelectionIndicator" Storyboard.TargetProperty="Opacity"
-                                                     To="1" Duration="0:0:0.1"/>
-                  </Storyboard>
-                </VisualState>
-                <VisualState x:Name="SelectedUnfocused">
-                  <Storyboard>
-                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="Border" Storyboard.TargetProperty="BorderBrush">
-                      <DiscreteObjectKeyFrame KeyTime="0" Value="#785A28"/>
-                    </ObjectAnimationUsingKeyFrames>
-                    <DoubleAnimation Storyboard.TargetName="SelectionIndicator" Storyboard.TargetProperty="Opacity"
-                                                     To="0.5" Duration="0:0:0.1"/>
-                  </Storyboard>
-                </VisualState>
+                <VisualState x:Name="Checked">
+                  <VisualState.Setters>
+                    <Setter Target="Border.BorderBrush" Value="{StaticResource ParentBorderBrush}"/>
+                    <Setter Target="EternalsText.Foreground" Value="#CDBE91"/>
+                    <Setter Target="FireIcon.Fill" Value="#CDBE91"/>
+                    <Setter Target="BottomPanel.Opacity" Value="1"/>
+                    <Setter Target="ChampionImage.Opacity" Value="0.8"/>
+                    <Setter Target="NameText.Foreground" Value="#F0E6D2"/>
+                  </VisualState.Setters>
+                </VisualState>                
               </VisualStateGroup>
             </VisualStateManager.VisualStateGroups>
 
@@ -125,27 +144,9 @@
                 <Image x:Name="ChampionImage" Source="{Binding ImageUrl}" Stretch="Uniform"/>
               </Border>
 
-              <Rectangle x:Name="SelectionIndicator" Fill="#3CFFFFFF" Opacity="0"/>
+              <StackPanel x:Name="BottomPanel" Style="{StaticResource ChampionPanelStyle}">
 
-              <StackPanel
-                x:Name="BottomPanel"
-                Height="30" 
-                Background="Black" 
-                Margin="0,0,1,1" 
-                Opacity="0.7" 
-                VerticalAlignment="Bottom" 
-                Orientation="Horizontal">
-
-                <Path
-                  x:Name="FireIcon"
-                  Width="18" 
-                  Height="18" 
-                  Fill="#B09B8C" 
-                  HorizontalAlignment="Right" 
-                  VerticalAlignment="Center"
-                  Stretch="Uniform"
-                  Margin="75,0,10,0"
-                  Data="M17.66 11.2C17.43 10.9 17.15 10.64 16.89 10.38C16.22 9.78 15.46 9.35 14.82 8.72C13.33 7.26 13 4.85 13.95 3C13 3.23 12.17 3.75 11.46 4.32C8.87 6.4 7.85 10.07 9.07 13.22C9.11 13.32 9.15 13.42 9.15 13.55C9.15 13.77 9 13.97 8.8 14.05C8.57 14.15 8.33 14.09 8.14 13.93C8.08 13.88 8.04 13.83 8 13.76C6.87 12.33 6.69 10.28 7.45 8.64C5.78 10 4.87 12.3 5 14.47C5.06 14.97 5.12 15.47 5.29 15.97C5.43 16.57 5.7 17.17 6 17.7C7.08 19.43 8.95 20.67 10.96 20.92C13.1 21.19 15.39 20.8 17.03 19.32C18.86 17.66 19.5 15 18.56 12.72L18.43 12.46C18.22 12 17.66 11.2 17.66 11.2M14.5 17.5C14.22 17.74 13.76 18 13.4 18.1C12.28 18.5 11.16 17.94 10.5 17.28C11.69 17 12.4 16.12 12.61 15.23C12.78 14.43 12.46 13.77 12.33 13C12.21 12.26 12.23 11.63 12.5 10.94C12.69 11.32 12.89 11.7 13.13 12C13.9 13 15.11 13.44 15.37 14.8C15.41 14.94 15.43 15.08 15.43 15.23C15.46 16.05 15.1 16.95 14.5 17.5H14.5Z" />
+                <Path x:Name="FireIcon" Style="{StaticResource FireIconStyle}"/>
 
                 <TextBlock
                   x:Name="EternalsText"  
@@ -156,13 +157,7 @@
                   VerticalAlignment="Center"/>
               </StackPanel>
 
-              <Image
-                HorizontalAlignment="Left"
-                VerticalAlignment="Bottom"
-                Source="ms-appx:///Leagueoflegends.Support/Images/badge_champion1.png"
-                Margin="0 0 0 -3"
-                Height="34"
-                Stretch="Uniform"/>
+              <Image Style="{StaticResource ChampionBadgeStyle}"/>
             </Grid>
 
             <TextBlock
