--- a/src/Leagueoflegends.Collection/Themes/Views/SkinsContent.xaml
+++ b/src/Leagueoflegends.Collection/Themes/Views/SkinsContent.xaml
@@ -27,7 +27,7 @@
                 SelectedItem="{Binding SelectedSortOption, Mode=TwoWay}"
                 DisplayMemberPath="Name"/>
             </StackPanel>
-            <units:RiotChampCollectionListBox
+            <units:RiotChampSkinListBox
               Grid.Column="1"
               ItemsSource="{Binding Champions}"
               Margin="20 0 0 0"/>
